// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Launchdarkly's aliasUser destination action: all fields 1`] = `
Array [
  Object {
    "contextKind": "user",
    "creationDate": 1612137600000,
    "key": "qkWpQ2NP*4",
    "kind": "alias",
    "previousContextKind": "anonymousUser",
    "previousKey": "qkWpQ2NP*4",
  },
]
`;

exports[`Testing snapshot for Launchdarkly's aliasUser destination action: required fields 1`] = `
Array [
  Object {
    "contextKind": "user",
    "creationDate": Any<Number>,
    "key": "qkWpQ2NP*4",
    "kind": "alias",
    "previousContextKind": "anonymousUser",
    "previousKey": "qkWpQ2NP*4",
  },
]
`;
